<resources>
    <string name="app_name">留言墙</string>
    <string name="AMap_apikey">b44e0cbaecddb28cc3bd5929c965db08</string>
    <string name="LeanCloud_APP_ID">lg1C6AKQm7Oln9lzc265Xr4L-gzGzoHsz</string>
    <string name="LeanCloud_APP_Key">jWyudCoYYfd9xIO98SU9nVHE</string>
    <string name="action_switch_toMap">地图</string>
    <string name="action_switch_toList">列表</string>
    <string name="action_setting">设置</string>
    <string name="action_logout">退出</string>
    <string name="action_finish">完成</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="register_user">注册用户</string>
    <string name="password_find">找回密码</string>
    <string name="create_subject">添加新留言墙</string>
    <string name="tip_create">点击下方按钮可添加新的留言墙</string>
    <string name="tip_drag">长按黄色标记可拖动选择留言墙地点</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="address_default">某个地址</string>
    <string name="default_reset">默认地址</string>
    <string name="subject_title">标题</string>
    <string name="introduction">简介</string>
    <string name="introduction_default">某个简介</string>
    <string name="check_detail">查看详情</string>
    <string name="add_message">添加留言</string>
    <string name="nickname_default">某个昵称</string>
    <string name="time_default">2016-01-01</string>
    <string name="content_default">某个留言</string>
    <string name="message_empty">暂无留言</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
