<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateSubjectActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_subject"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_create_subject"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/address_default"
                android:layout_toLeftOf="@+id/button_default"
                android:layout_toStartOf="@+id/button_default"
                android:textColor="@color/textColor"/>
            <Button
                android:id="@+id/button_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/default_reset"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject_name"
            android:textColor="@color/textColor"/>
        <EditText
            android:id="@+id/editText_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduction"
            android:textColor="@color/textColor"/>
    </LinearLayout>
</RelativeLayout>
